Fix overflow issue

--- a/src/components/bytes/View/ByteStepperItem/ByteStepperItemWithProgressBar.module.scss
+++ b/src/components/bytes/View/ByteStepperItem/ByteStepperItemWithProgressBar.module.scss
@@ -15,7 +15,3 @@
   height: 350px;
   margin: 0 auto;
 }
-
-.contentContainer {
-  overflow-y: auto;
-}
